--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>MUD</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
-<link rel="icon" href="favicon.ico" />
+<link rel="icon" href="favicon.png"/>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </head>
 <body>
