--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -32,43 +32,57 @@
 		var token = localStorage.getItem("userToken");
 		var gameID = localStorage.getItem("gameID");
 		var username = localStorage.getItem("username");
+		var currentLocation = 0;
 
 		var chatRefresher = null;
+		var playerRefresher = null;
+		var drawRefresher = null;
 		
 		var addedChats = [];
 
 		var canvas = document.getElementById("mapDisplay");
 		var drawContext = canvas.getContext("2d");
 
-		var mapObject = "";
+		var mapObject = null;
+		var playerObject = null;
 
 		drawContext.fillStyle = "#111111";
 		drawContext.fillRect(0, 0, 300, 300);
 
 		$.post("backend/get_map.php", {gameIndex:gameID}, function(data, status) {
 			mapObject = JSON.parse(data);
-			for (var j in mapObject.locations) {
-				console.log(mapObject.locations[j].type);
-				if (mapObject.locations[j].type === "forest") {
-					drawTriangle(mapObject.locations[j].x * 20, mapObject.locations[j].y * 20, 16);
-				}
-				if (mapObject.locations[j].type === "cave") {
-					drawContext.fillStyle = "white";
-					drawContext.fillRect(mapObject.locations[j].x * 20, mapObject.locations[j].y * 20, 16, 16);
-				}
-				if (mapObject.locations[j].type === "town") {
-					drawCircle(mapObject.locations[j].x * 20, mapObject.locations[j].y * 20, 8);
-				}
-				drawContext.fillStyle = "#ffffff";
-				drawContext.font = "12px Arial";
-				drawContext.fillText("(" + mapObject.locations[j].id + ") " + mapObject.locations[j].name, (mapObject.locations[j].x * 20) - mapObject.locations[j].name.length * 2, (mapObject.locations[j].y * 20) + 28);
-			}
 		});
+		
+		function render() {
+			drawContext.clearRect(0, 0, 300, 300);
+			
+			if(mapObject != null && playerObject != null) {
+				for (var j in mapObject.locations) {
+					if(currentLocation == mapObject.locations[j].id) {
+						drawContext.fillStyle = "red";
+					} else {
+						drawContext.fillStyle = "white";
+					}
+					
+					if (mapObject.locations[j].type === "forest") {
+						drawTriangle(mapObject.locations[j].x * 20, mapObject.locations[j].y * 20, 16);
+					}
+					if (mapObject.locations[j].type === "cave") {
+						drawContext.fillRect(mapObject.locations[j].x * 20, mapObject.locations[j].y * 20, 16, 16);
+					}
+					if (mapObject.locations[j].type === "town") {
+						drawCircle(mapObject.locations[j].x * 20, mapObject.locations[j].y * 20, 8);
+					}
+					drawContext.fillStyle = "#ffffff";
+					drawContext.font = "12px Arial";
+					drawContext.fillText("(" + mapObject.locations[j].id + ") " + mapObject.locations[j].name, (mapObject.locations[j].x * 20) - mapObject.locations[j].name.length * 2, (mapObject.locations[j].y * 20) + 28);
+				}
+			}
+		}
 
 		function drawCircle(x, y, radius) {
 			drawContext.beginPath();
 			drawContext.arc(x + radius, y + radius, radius, 0, 2*Math.PI, false);
-			drawContext.fillStyle = "white";
 			drawContext.fill();
 		}
 
@@ -77,18 +91,22 @@
     		drawContext.moveTo(base * 2 + x, y);
     		drawContext.lineTo(base + x,base + y);
     		drawContext.lineTo(base*3 + x,base + y);
-    		drawContext.fillStyle = "white";
     		drawContext.fill();
 		}
 		
 		$(document).ready(function() {
+			drawRefresher = setInterval(function() { render(); }, 500);
+			
 			$("#user_input").keypress(function( e ) {
 				if(e.keyCode === 13 && $("#user_input").val() !== "") {
 					if ($("#user_input").val().startsWith("/")) {
 						if ($("#user_input").val().startsWith("/travel")) {
 							$.post("backend/player_travel.php", {id:token, gameIndex:gameID, locationId:$("#user_input").val().split(" ")[1]}, function(data, status) {
-								// Do whatever
-								$("#user_input").val("");
+								if(data != "notvalid") {
+									$("#user_input").val("");
+								} else { // Location doesn't exist
+									alert("This location does not exist.");
+								}
 							});
 						}
 					} else {
@@ -126,21 +144,10 @@
 
 			playerRefresher = setInterval(function() {
 				$.post("backend/refresh_players.php", {gameIndex:gameID}, function(data, status) {
-					var playersObject = JSON.parse(data);
-					for (var k in playersObject.players) {
-						if (playerObject.players[k].username == username) {
-							drawContext.fillStyle = "red";
-						} else {
-							drawContext.fillStyle = "blue";
-						}
-
-						for (var l in mapObject.locations) {
-							if (playerObject.players[k].location === mapObject.locations[l].id) {
-								drawContext.fillRect(mapObject.locations[l].x, mapObject.locations[l].y, 16, 16);
-								drawContext.fillStyle = "#ffffff";
-								drawContext.font = "12px Arial";
-								drawContext.fillText(playerObject.players[k].username, (mapObject.locations[j].x * 20) - playerObject.players[k].username.length * 2, (mapObject.locations[j].y * 20) + 28);
-							}
+					playerObject = JSON.parse(data);
+					for (var k in playerObject.players) {
+						if (playerObject.players[k].id == token) {
+							currentLocation = playerObject.players[k].location;
 						}
 					}
 				});
