--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -22,12 +22,16 @@
 
 	<div id="info">
 		<p id="players_list">Who else is here: </p>
-		<div id="map"><canvas width="300" height="300" id="mapDisplay">
-		</canvas>
-		<button id="toggle_map">Local Map</button>
+
+		<div id="map">
+		  <canvas width="300" height="300" id="mapDisplay"></canvas>
+		  <button id="toggle_map">Local Map</button>
 		</div>
-		<div id="inventory">INVENTORY<br />
-		<ul id="inventory_list"></ul>
+
+		<div id="inventory">
+		    <li class="inventory_item">Rock</li>
+		    <li class="inventory_item">Lithium</li>
+		    <li class="inventory_item">Glass Shard</li>
 		</div>
 	</div>
 	
