Okay Jay, have at er'.

--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -30,8 +30,10 @@
 
 		<div id="inventory">
 			INVENTORY<br/>
-			<ul id="inventory_list">
-			</ul>
+			<div id="inventory_inside">
+				<ul id="inventory_list">
+				</ul>
+			</div>
 		</div>
 	</div>
 	
