--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -323,7 +323,11 @@
  					inventoryObject = JSON.parse(data);
  					for(var i = 0; i < inventoryObject.inventory.length; i++) {
  						console.log(inventoryObject.inventory[i].name);
- 						$(document).find("#inventory_list").append("<li class=\"inventory_element\" style=\"display: inline; margin: 0; margin-right: 2%;\"><div class=\"inventory_item\" style=\"display: inline;\" title=\"" + inventoryObject.inventory[i].name + "\"><img src=\"" + inventoryObject.inventory[i].image.replace(/@/g,"/") + "\" width=\"10%\" height=\"10%\" style=\"display: inline;\"/></div></li>");
+ 						if(inventoryObject.inventory[i].amount > 1) { // Is stacked
+ 	 						$(document).find("#inventory_list").append("<li class=\"inventory_element\" style=\"display: inline; margin: 0; margin-right: 2%;\"><div class=\"inventory_item\" style=\"display: inline;\" title=\"" + inventoryObject.inventory[i].name + "\"><p style=\"display:inline; position: relative; left: 4%; color:#bf2224;\">(" + inventoryObject.inventory[i].amount + ")</p><img src=\"" + inventoryObject.inventory[i].image.replace(/@/g,"/") + "\" width=\"10%\" height=\"10%\" style=\"display: inline;\"/></div></li>");
+ 						} else { // Single item
+ 	 						$(document).find("#inventory_list").append("<li class=\"inventory_element\" style=\"display: inline; margin: 0; margin-right: 2%;\"><div class=\"inventory_item\" style=\"display: inline;\" title=\"" + inventoryObject.inventory[i].name + "\"><img src=\"" + inventoryObject.inventory[i].image.replace(/@/g,"/") + "\" width=\"10%\" height=\"10%\" style=\"display: inline;\"/></div></li>");
+ 						}
  					}
  				});
 			}
