Set up database for combat system

--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -43,9 +43,9 @@
 		//var token = localStorage.getItem("userToken");
 		//var gameID = localStorage.getItem("gameID");
 		//var username = localStorage.getItem("username");
-		var token = 20;
-		var gameID = 51;
-		var username = "Jacob_Pickens";
+		var token = 8;
+		var gameID = 1;
+		var username = "asdf";
 		var currentLocation = 1;
 
 		var chatRefresher = null;
