--- a/WebContent/duel.html
+++ b/WebContent/duel.html
@@ -24,7 +24,9 @@
 
 <h1 id="current_turn"></h1>
 
-<div></div>
+<div id="actions">
+	<button id="basic_attack">Basic Attack</button>
+</div>
 
 <script>
 
@@ -67,6 +69,10 @@ function refreshDuel() {
 
 $(document).ready(function() {
 	$(document).find("#local_username").text(username);
+	
+	$(document).find("#basic_attack").click(function() {
+		alert("oh boi");
+	});
 	
 	duelRefresh = setInterval(function() {refreshDuel();}, 500);
 });
