Basic Attack Dueling Complete

--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -42,12 +42,9 @@
 	<input type=text id="user_input" placeholder="Enter a command. Type /help for help." autofocus></input>
 
 	<script>
-		//var token = localStorage.getItem("userToken");
-		//var gameID = localStorage.getItem("gameID");
-		//var username = localStorage.getItem("username");
-		var token = 8;
-		var gameID = 21;
-		var username = "asdf";
+		var token = localStorage.getItem("userToken");
+		var gameID = localStorage.getItem("gameID");
+		var username = localStorage.getItem("username");
 		var currentLocation = 1;
 
 		var chatRefresher = null;
