--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -42,9 +42,13 @@
 	<input type=text id="user_input" placeholder="Enter a command. Type /help for help." autofocus></input>
 
 	<script>
-		var token = localStorage.getItem("userToken");
-		var gameID = localStorage.getItem("gameID");
-		var username = localStorage.getItem("username");
+		//var token = localStorage.getItem("userToken");
+		//var gameID = localStorage.getItem("gameID");
+		//var username = localStorage.getItem("username");
+		
+		var token = 20;
+		var gameID = 3;
+		var username = "Jacob_Pickens";
 		var currentLocation = 1;
 
 		var chatRefresher = null;
